# usedphone_distributor

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  Anchor.toml  Cargo.toml  Shuttle.toml  package.json  readme.md
app/: deposit.ts  generateMarkerHolders.ts
backend/: Cargo.toml  deposit.json
backend/migrations/: 20240206054848_holders.down.sql  20240206054848_holders.up.sql
backend/src/: any_keypair.rs  lib.rs  main.rs  priority_fee.rs  service.rs  settings.rs  token_holder.rs  transaction_status.rs  transfer.json
keys/: authority.json  distributor-keypair.json
migrations/: deploy.ts
programs/distributor/: Cargo.toml
programs/distributor/src/: error.rs  lib.rs
tests/: distributor.ts  utils.ts
tests/keys/: marker_mint.json  mint.json
