[workspace]
members = [
    "backend",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/p2p-org/curve25519-dalek", branch = "fix-v3.2.1" }
aes-gcm-siv = { git = "https://github.com/p2p-org/AEADs", branch = "unpin-zeroize" }