[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
tokio = "1.36.0"
tracing = "0.1.40"
anyhow = "1.0.79"
serde_json = "1.0.113"
serde = "1.0.196"
serde_with = "3.6.0"
solana-sdk = "1.16.27"
solana-client = "1.16.27"
jsonrpsee = { version = "0.21.0", features = ["async-client", "macros", "http-client"] }
anchor-client = { version = "0.29.0", features = ["async"] }
bs58 = "0.5.0"
distributor = { workspace = true }