[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anyhow = "1.0.79"
axum = "0.7.4"
bs58 = "0.5.0"
distributor = { workspace = true }
jsonrpsee = { version = "0.21.0", features = ["async-client", "macros", "http-client"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.6.0"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
solana-client = "1.16.27"
solana-sdk = "1.16.27"
tokio = "1.36.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["auth"] }
tracing = "0.1.40"
