[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
bincode = "1.3.3"
bs58 = "0.5.0"
distributor = { workspace = true }
itertools = "0.12.1"
jsonrpsee = { version = "0.21.0", features = ["async-client", "macros", "http-client"] }
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.6.0"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
solana-client = "1.16.27"
solana-sdk = "1.16.27"
solana-transaction-status = "1.16.27"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
spl-memo = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
sqlx = { version = "0.7.3", features = ["postgres", "migrate"] }
tokio = "1.36.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["auth"] }
tracing = "0.1.40"

[dev-dependencies]
dotenvy = "0.15.7"
